tests/ui/derive/unknown_struct_attr.stderr
error: unsupported #[clapfig(...)] type attribute: `notreal`. Supported: name = "...", strict = true/false, rename_all = "..."
 --> tests/ui/derive/unknown_struct_attr.rs:4:11
  |
4 | #[clapfig(notreal = "x")]
  |           ^^^^^^^
